projects/examples/source/02.03.04.cpp
////////////////////////////////////////////////////////////

#include <cassert>
#include <iterator>

////////////////////////////////////////////////////////////

int main()
{
    int array[5]{ 1, 2, 3, 4, 5 };

//  --------------------------------------------------------

	static_assert(sizeof(array) / sizeof(int) == 5);

//  --------------------------------------------------------
    
    assert(std::size(array) == 5);

//  --------------------------------------------------------
    
    assert(array[0] == 1 && 0[array] == 1 && array[1] == 2);
    
//	assert(array[5] == 0); // error

//  --------------------------------------------------------
    
    assert(*array == 1 && *(array + 1) == 2);
    
//	assert(*(array + 5) == 0); // error

//  --------------------------------------------------------
    
    assert(array + std::size(array) - array == 5);
}

////////////////////////////////////////////////////////////